--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,9 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.27.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'com.h2database:h2'
     compile 'mysql:mysql-connector-java'
     compile 'org.springframework.boot:spring-boot-starter-undertow'
 
